unpackaged/main/default/objects/Skill__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>