unpackaged/main/default/objects/Skill__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Employee_Record__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>