unpackaged/main/default/objects/Skill__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Enter start date of experience</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>