unpackaged/main/default/objects/Skill__c/fields/Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_Experience__c</fullName>
    <formula>(TODAY() -   Completed_Date__c ) /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>