unpackaged/main/default/objects/Skill__c/recordTypes/Qualification.recordType-meta.xml
<RecordType>
    <fullName>Qualification</fullName>
    <active>true</active>
    <label>Qualification</label>
</RecordType>