unpackaged/main/default/objects/Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Completed_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>